--- a/conf/logstash/glpi_tickets.conf
+++ b/conf/logstash/glpi_tickets.conf
@@ -1,8 +1,8 @@
 input {
     jdbc {
-        jdbc_connection_string => "jdbc:mysql://10.252.251.16:3306/glpi"
-        jdbc_user => "glpiro"
-	jdbc_password => "glpiro"
+        jdbc_connection_string => "jdbc:mysql://xx.xx.xx.xx:3306/glpi"
+        jdbc_user => "user"
+	jdbc_password => "password"
         jdbc_driver_library => "/opt/logstash/jdbc-drivers/mysql-connector-java-5.1.37-bin.jar"
         jdbc_driver_class => "com.mysql.jdbc.Driver"
         statement_filepath => "/opt/es-glpi/conf/sql/glpi_tickets.sql"
