add example dashboard; configure default index for Kibana

--- a/conf/mappings/glpi_tasks.json
+++ b/conf/mappings/glpi_tasks.json
@@ -15,7 +15,7 @@
           "DID": {
             "type": "long"
           },
-          "Date Tache": {
+          "date": {
             "type": "date",
             "format": "strict_date_optional_time||epoch_millis"
           },
